--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- ✅ Navbar -->
     <nav class="navbar">
         <div class="nav-container">
-            <span class="logo">NICOLE MICALLEF</span>
+            <a href="#" class="logo">NICOLE MICALLEF</a>
             <ul class="nav-links">
                 <li><a href="contact.html">CONTACT</a></li>
             </ul>
