update for modals to work

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
         <div class="modal-content">
             <span class="close-btn">&times;</span>
             <div class="carousel">
-                
+                <img src="Images/baskerville-mockup.png" class="modal-img" id="carousel-image" alt="Carousel Image">
             </div>
             <div class="carousel-controls">
                 <button class="prev">Prev</button>
