--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Me</title>
-    <link rel="icon" type="image/png" href="Images/favicon.png">
+    <link rel="icon" type="image" href="Images/favicon.webp">
     <link rel="stylesheet" href="styles.css">
     
 </head>
