--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- ✅ Navbar -->
     <nav class="navbar">
         <div class="nav-container">
-            <a href="#" class="logo">NICOLE MICALLEF</a>
+            <a href="#" class="logo"><span class="name-part">NICOLE</span><span> </span></span><span class="name-part">MICALLEF</span></a>
             <ul class="nav-links">
                 <li><a href="contact.html">CONTACT</a></li>
             </ul>
